Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110949

lupdate: trailing return type with template parameters

XMLWordPrintable

    • 98c098742 (dev), 4d4b48260 (6.6), 67ec0dcb2 (6.5)

      lupdate cannot decipher context if template parameters are used in trailing return type.

      To reproduce:

      lupdate main.cpp -ts test.ts
      

      Produces:

      /home/user/Downloads/main.cpp:16: tr() cannot be called without context
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jbornema Joerg Bornemann
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes